<resources>
    <string name="app_name">Demo App</string>
    <string name="lbl_cupones">Cupones</string>
    <string name="lbl_menu">Menú</string>
    <string name="lbl_historial">Mis compras</string>
    <string name="lbl_pedidos">Ordenar</string>
    <string name="lbl_inicio">Inicio </string>
    <string name="lbl_perfil">Perfil </string>
    <string name="lbl_config">Configuración </string>
    <string name="lbl_login">Inicia Sesión </string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtPassword">Contraseña</string>
    <string name="txtEmail">Email</string>
    <string name="txt_sin_cuenta">Si no tienes cuenta</string>
    <string name="registrate_aqui">Registrate aquí</string>
    <string name="lbl_crear_cuenta">Crear cuenta</string>
    <string name="txt_user_name">Nombre</string>
    <string name="txt_lastname">Apellidos</string>
    <string name="txt_crear_cuenta">Crear cuenta</string>
    <string name="close_session">Cerrar sesión</string>
</resources>
