<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:background="@drawable/background_app">

    <TextView
        android:id="@+id/txtTitle"
        style="@style/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/lbl_login" />

    <ImageView
        android:layout_below="@+id/txtTitle"
        android:id="@+id/ivwLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/dogo_logo"
        android:foregroundGravity="center_horizontal"
        android:layout_marginTop="50dp"/>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_below="@id/ivwLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtEmail"
            android:hint="@string/txtEmail"
            android:inputType="textEmailAddress"
            style="@style/form_input"
            />
        <EditText
            style="@style/form_input"
            android:id="@+id/txtPassword"
            android:hint="@string/txtPassword"
            android:inputType="textPassword"
            />
        <Button
            android:id="@+id/btnLogin"
            android:text="Inciar Sesión"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:background="@drawable/btn_primary"
            android:textColor="@drawable/btn_text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_sin_cuenta"
            android:layout_gravity="center_horizontal"
            android:textSize="12sp"/>
        <TextView
            android:id="@+id/lblRegistro"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrate_aqui"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"/>
    </LinearLayout>

</RelativeLayout>